--- a/app/src/main/res/drawable/rounded_background_uncompleted.xml
+++ b/app/src/main/res/drawable/rounded_background_uncompleted.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E66D6680"/>
-    <corners android:radius="40dp"/>
+    <solid android:color="#FF8F80"/>
+    <corners android:radius="10dp"/>
 </shape>
